[gd_scene load_steps=7 format=3 uid="uid://d00dea4s1r3j5"]

[ext_resource type="Script" uid="uid://cbjoeip8pwsob" path="res://Script/Player.gd" id="1_hao3x"]
[ext_resource type="Texture2D" uid="uid://b7ogy1evunfno" path="res://Assets/32x32/head-32.png" id="2_3eeal"]
[ext_resource type="Script" uid="uid://cuqsbphve6mg2" path="res://Script/PlayerInput.gd" id="3_fvocf"]
[ext_resource type="Script" uid="uid://dq37otghs2dwx" path="res://Script/PlayerMovement.gd" id="4_pmp2f"]
[ext_resource type="Script" uid="uid://c71usu3qfd511" path="res://Script/PlayerBody.gd" id="5_3pik8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hao3x"]
size = Vector2(30, 30)

[node name="Plear" type="Area2D"]
z_index = 5
script = ExtResource("1_hao3x")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_3eeal")
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_hao3x")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource("3_fvocf")

[node name="PlayerMovement" type="Node" parent="."]
script = ExtResource("4_pmp2f")

[node name="PlayerBody" type="Node" parent="."]
script = ExtResource("5_3pik8")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
